fixed some spacing

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -87,7 +87,8 @@ nav {
     gap: 14.5px;
 
     background-color: #1A1A1C;
-    padding: 24px 24px 32px;
+    padding: 24px 24px 30px;
+    margin-bottom: 8px;
 }
 .datetime {
     font-size: 24px;
@@ -100,10 +101,8 @@ nav {
 }
 /* Events info */
 .events {
-    margin: 32px 24px 16px;
-
+    margin: 0 24px;
     font-size: 14px;
-
     border-spacing: 0 24px;
 }
 .event-date {
@@ -114,7 +113,7 @@ nav {
 }
 /* Add dates to calendar button */
 .calendar-button {
-    margin: 16px 24px 32px;
+    margin: 8px 24px 32px;
     padding: 14px 0;
     border-style: none;
     border-radius: 100px;
